# android-pack-tools

./: .gitignore  README.md  env.bat
doc/: ELF.txt  ROM.txt  crash-vxdgame.txt  gdbserver.txt
dumpso/jni/: Android.mk  Application.mk  main.c
fixelf/: README.txt
fixelf/src/: CMakeLists.txt  fixelf.cpp
ijiami/: ijiami.txt  libexec-m.idb  libexec.idb  libexecgame.idb  libexecmain.idb
soloader/jni/: Android.mk  Application.mk  soloader.c  soloader1.c
tenprotect/: tenprotect.sln
tenprotect/jni/: Android.mk  Application.mk  tp.c  tp_version_scripts.txt
tenprotect/tenprotect/: main.cpp  tenprotect.vcxproj
test/jni/: Android.mk  Application.mk  test1.c  test2.c
